--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-Flask==3.1.2
-Flask-SQLAlchemy==3.1.1
-SQLAlchemy==2.0.43
-python-dotenv==1.1.1
-Jinja2==3.1.6
+Flask
+python-dotenv
+Jinja2
 # Para manejo de formularios CSRF en Flask
-itsdangerous==2.2.0
+itsdangerous
 # Servidor web de desarrollo
-Werkzeug==3.1.3
+Werkzeug
