--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,65 @@
-Flask
-python-dotenv
-Jinja2
-# Para manejo de formularios CSRF en Flask
-itsdangerous
-# Servidor web de desarrollo
-Werkzeug
+# Core Flask
+Flask==3.0.0
+python-dotenv==1.0.0
+Jinja2==3.1.2
+itsdangerous==2.1.2
+Werkzeug==3.0.0
+
+# Database
+Flask-SQLAlchemy==3.1.1
+psycopg2-binary==2.9.9
+Flask-Migrate==4.0.5
+SQLAlchemy==2.0.23
+
+# Authentication
+Flask-Login==0.6.3
+Flask-Bcrypt==1.0.1
+PyJWT==2.8.0
+
+# Forms & Validation
+Flask-WTF==1.2.1
+WTForms==3.1.1
+email-validator==2.1.0
+
+# API & Serialization
+Flask-CORS==4.0.0
+marshmallow==3.20.1
+Flask-Marshmallow==0.15.0
+marshmallow-sqlalchemy==0.29.0
+
+# WhatsApp Integration
+requests==2.31.0
+twilio==8.10.0
+
+# AI/ML for Order Processing
+openai==1.3.7
+langchain==0.0.340
+python-telegram-bot==20.7
+
+# Real-time Notifications
+Flask-SocketIO==5.3.5
+python-socketio==5.10.0
+eventlet==0.33.3
+
+# Payments
+stripe==7.7.0
+
+# Reports & Analytics
+pandas==2.1.3
+matplotlib==3.8.2
+seaborn==0.13.0
+reportlab==4.0.7
+openpyxl==3.1.2
+
+# Utilities
+python-dateutil==2.8.2
+pytz==2023.3
+phonenumbers==8.13.27
+
+# Security
+Flask-Limiter==3.5.0
+
+# Development
+pytest==7.4.3
+pytest-flask==1.3.0
+faker==20.1.0
