--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,13 @@ services:
       - FLASK_PORT=5000
       - DATABASE_URL=postgresql://prontoa_user:prontoa_pass@db:5432/prontoa_db
       - SECRET_KEY=dev-secret-key-change-in-production
+      # WhatsApp API
+      - WHATSAPP_PHONE_ID=${WHATSAPP_PHONE_ID}
+      - WHATSAPP_TOKEN=${WHATSAPP_TOKEN}
+      - WHATSAPP_VERIFY_TOKEN=${WHATSAPP_VERIFY_TOKEN}
+      # Perplexity AI
+      - PERPLEXITY_API_KEY=${PERPLEXITY_API_KEY}
+      - PERPLEXITY_MODEL=${PERPLEXITY_MODEL:-llama-3.1-sonar-small-128k-online}
     volumes:
       # Montar código fuente para desarrollo en vivo
       - .:/app
