--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ marshmallow-sqlalchemy==0.29.0
 requests==2.31.0
 twilio==8.10.0
 
-# AI/ML for Order Processing
+# AI/ML for Order Processing (Perplexity compatible con OpenAI API)
 openai==1.3.7
 langchain==0.0.340
 python-telegram-bot==20.7
