--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,26 +28,40 @@ services:
     container_name: prontoa-web
     ports:
       - "5000:5000"
+    env_file:
+      - .env
     environment:
-      - FLASK_CONFIG=development
-      - FLASK_DEBUG=True
-      - FLASK_HOST=0.0.0.0
-      - FLASK_PORT=5000
-      - DATABASE_URL=postgresql://prontoa_user:prontoa_pass@db:5432/prontoa_db
-      - SECRET_KEY=dev-secret-key-change-in-production
-      # WhatsApp API
-      - WHATSAPP_PHONE_ID=${WHATSAPP_PHONE_ID}
-      - WHATSAPP_TOKEN=${WHATSAPP_TOKEN}
-      - WHATSAPP_VERIFY_TOKEN=${WHATSAPP_VERIFY_TOKEN}
-      # Perplexity AI
-      - PERPLEXITY_API_KEY=${PERPLEXITY_API_KEY}
-      - PERPLEXITY_MODEL=${PERPLEXITY_MODEL:-llama-3.1-sonar-small-128k-online}
+      FLASK_CONFIG: ${FLASK_CONFIG:-development}
+      FLASK_HOST: 0.0.0.0
+      FLASK_PORT: 5000
+      DATABASE_URL: postgresql://prontoa_user:prontoa_pass@db:5432/prontoa_db
+      WAIT_FOR_DB: "true"
+      SKIP_DB_SEED: "false"
     volumes:
       # Montar código fuente para desarrollo en vivo
       - .:/app
       - /app/__pycache__
       # Volumen persistente para uploads (no se pierde al rebuildar)
       - uploads_data:/app/uploads
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - prontoa-network
+    restart: unless-stopped
+
+  telegram-bot:
+    build: .
+    command: python -m app.scripts.telegram_bot
+    env_file:
+      - .env
+    environment:
+      FLASK_CONFIG: ${FLASK_CONFIG:-development}
+      DATABASE_URL: postgresql://prontoa_user:prontoa_pass@db:5432/prontoa_db
+      WAIT_FOR_DB: "true"
+      SKIP_DB_SEED: "true"
+    volumes:
+      - .:/app
     depends_on:
       db:
         condition: service_healthy
