--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -14,26 +14,21 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
         registry: ghcr.io
-        username: ${{ github.actor }}
+        username: ${{ github.repository_owner }}
         password: ${{ secrets.GH_PATH }}
 
-    - name: Build and push web image
-      uses: docker/build-push-action@v4
+    - name: Build and push app images
+      uses: docker/build-push-action@v5
       with:
         context: .
+        file: Dockerfile
         push: true
-        tags: ghcr.io/curcolor/prontoaweb-web:latest
-
-    - name: Build and push telegram-bot image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        file: Dockerfile.bot
-        push: true
-        tags: ghcr.io/curcolor/prontoaweb-bot:latest
+        tags: |
+          ghcr.io/curcolor/prontoaweb-web:latest
+          ghcr.io/curcolor/prontoaweb-bot:latest
 
     # Si usas una imagen propia para la base de datos, descomenta esta sección
     # - name: Build and push db image
