feat: Añadir re-etiquetado y publicación de imagen de base de datos en el flujo de trabajo de Docker; actualizar instrucciones en README

--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -29,3 +29,9 @@ jobs:
         tags: |
           ghcr.io/curcolor/prontoaweb-web:latest
           ghcr.io/curcolor/prontoaweb-bot:latest
+
+    - name: Re-tag and push database image
+      run: |
+        docker pull postgres:15-alpine
+        docker tag postgres:15-alpine ghcr.io/${{ github.repository_owner }}/prontoaweb-db:15-alpine
+        docker push ghcr.io/${{ github.repository_owner }}/prontoaweb-db:15-alpine
