feat: Implementar re-etiquetado de imagen de base de datos en el flujo de trabajo de Docker; actualizar documentación en README y agregar ejemplos de uso de la API

--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -33,5 +33,6 @@ jobs:
     - name: Re-tag and push database image
       run: |
         docker pull postgres:15-alpine
-        docker tag postgres:15-alpine ghcr.io/${{ github.repository_owner }}/prontoaweb-db:15-alpine
-        docker push ghcr.io/${{ github.repository_owner }}/prontoaweb-db:15-alpine
+        OWNER_LC=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+        docker tag postgres:15-alpine ghcr.io/${OWNER_LC}/prontoaweb-db:15-alpine
+        docker push ghcr.io/${OWNER_LC}/prontoaweb-db:15-alpine
